welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:11: error: ')' expected but integer literal found.
for (l <- to 3) {
             ^Runner:16: error: illegal start of simple expression
	}
        ^