welcome.lessons.welcome.loopfor.LoopStairs.scala.code
while (!estFaceMur()) {
	avance();
}
for (k <- 1 to 8) {
	gauche();
	avance();
	droite();
	avance();
}
for (l <- to 3) {
	avance();
}
